--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,12 @@
 #Port for server socket to recieve data from (Make sure it is different from any other server/socket port)
 port: 5000
+
+#Server Name
 serverName: 'server1'
+
+#Whitelist(IP AND PORT)
+whitelist:
+  enabled: false
+  ip:
+    - 192.168.1.1:25565
+    - 192.168.0.1:25565
