--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: InterCity-Transport-System
 version: ${project.version}
-main: me.hasunemiku2015.icts.Main
-api-version: 1.15
+main: me.hasunemiku2015.icts.ICTS
+api-version: 1.13
 depend: [Train_Carts, BKCommonLib]
