--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>me.hasunemiku2015.its</groupId>
-    <artifactId>InterCity-Transport-System</artifactId>
-    <version>1.0</version>
+    <groupId>com.hasunemiku2015.icts</groupId>
+    <artifactId>ICTS</artifactId>
+    <version>1.4</version>
     <packaging>jar</packaging>
 
-    <name>InterCity-Transport-System</name>
+    <name>InterCity Transport System</name>
 
     <properties>
         <java.version>1.8</java.version>
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>com.bergerkiller.bukkit</groupId>
             <artifactId>TrainCarts</artifactId>
-            <version>1.16.2-v1-SNAPSHOT</version>
+            <version>1.18.1-v2</version>
             <scope>provided</scope>
         </dependency>
 
