--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,9 @@
 name: InterCity-Transport-System
 version: ${project.version}
-main: me.hasunemiku2015.icts.Main
-api-version: 1.15
-depend: [Train_Carts]
+main: me.hasunemiku2015.icts.ICTS
+api-version: 1.13
+depend: [Train_Carts, BKCommonLib]
+permissions:
+  icts.buildsign:
+    description: Allows a player to construct icts sign
+    default: op
