--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.hasunemiku2015.icts</groupId>
     <artifactId>ICTS</artifactId>
-    <version>1.5beta-TC</version>
+    <version>1.5-beta-bec1fc24-ba38-11ec-8422-0242ac120002</version>
     <packaging>jar</packaging>
 
     <name>InterCity Transport System</name>
