--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: InterCity-Transport-System
 version: ${project.version}
-main: me.hasunemiku2015.icts.ICTS
+main: com.hasunemiku2015.icts.ICTS
 api-version: 1.13
 depend: [Train_Carts, BKCommonLib]
 permissions:
